--- a/src/styles/components/Navbar.sass
+++ b/src/styles/components/Navbar.sass
@@ -8,7 +8,7 @@
     padding: $padding-primary
     font-family: $font-primary
     a
-      @apply no-underline font-semibold 
+      @apply no-underline font-semibold text-2xl 
       @apply flex-1 relative text-center
       color: $color-text
       border-left: solid 1px
