--- a/src/styles/components/Greeting.sass
+++ b/src/styles/components/Greeting.sass
@@ -5,13 +5,13 @@
   @apply flex flex-row justify-center items-center
 
 .head-canvas 
-  width: 50vw
-  height: 60vh
+  width: 50rem
+  height: 50rem
 
 .greeting-msg
   color: $color-text
   @apply text-8xl text-left
   font-family: $font-common
-  width: 30vw
+  width: 30rem
 
    
