--- a/src/App.sass
+++ b/src/App.sass
@@ -1,11 +1,16 @@
 @import "@/styles/utils/utils"
 @import "@/styles/utils/fonts"
 
-.App
-  @apply h-screen w-screen m-0
-  @apply grid
-  grid-template-rows: 1fr 11fr
-  background-color: $color-background 
-
 body
   margin: 0
+  font-family: $font-primary
+
+.App
+  @apply h-screen w-screen m-0
+  background-color: $color-background 
+
+.app-container
+  max-width: 1200px
+  width: 100%
+  margin: 0 auto
+  box-sizing: border-box
