--- a/src/styles/components/Navbar.sass
+++ b/src/styles/components/Navbar.sass
@@ -5,7 +5,7 @@
     @apply block 
     @apply flex flex-wrap content-between list-none m-0
     height: $height-primary
-    padding: $padding-primary 0
+    padding: $padding-primary 5rem $padding-primary 0
     font-family: $font-primary
     a
       @apply no-underline font-semibold text-2xl 
