--- a/src/App.sass
+++ b/src/App.sass
@@ -4,13 +4,15 @@
 body
   margin: 0
   font-family: $font-primary
+  color: $color-text
+
 
 .App
-  @apply h-screen w-screen m-0
+  @apply h-auto w-screen m-0
   background-color: $color-background 
 
 .app-container
-  max-width: 1200px
+  max-width: 1600px
   width: 100%
   margin: 0 auto
   box-sizing: border-box
