--- a/src/styles/components/Action.sass
+++ b/src/styles/components/Action.sass
@@ -1,9 +1,8 @@
-@import "@/styles/utils/fonts"
+import "@/styles/utils/fonts"
 @import "@/styles/utils/utils"
 .action
   @apply text-xl text-center
   font-family: $font-secondary
-  color: $color-text 
   p
     margin-bottom: 5px
     opacity: 0.5
