--- a/src/styles/components/Action.sass
+++ b/src/styles/components/Action.sass
@@ -1,4 +1,4 @@
-import "@/styles/utils/fonts"
+@import "@/styles/utils/fonts"
 @import "@/styles/utils/utils"
 .action
   @apply text-xl text-center
