--- a/src/styles/components/Navbar.sass
+++ b/src/styles/components/Navbar.sass
@@ -11,5 +11,6 @@
       @apply no-underline font-semibold text-2xl 
       @apply flex-1 relative text-center
       border-left: solid 1px
+      color: $color-text
     a:first-child
       border-left: none
