--- a/src/styles/components/Action.sass
+++ b/src/styles/components/Action.sass
@@ -9,16 +9,15 @@
 
 .mouse-icon
   width: 20px
-  opacity: 0.5
   height: 30px
+  opacity: 0.5
   border: 2px solid #fff
   border-top-left-radius: 20px
   border-top-right-radius: 20px
   border-bottom-left-radius: 10px
   border-bottom-right-radius: 10px
   position: relative
-  margin: 0 auto  /* Center horizontally */
-
+  margin: 0 auto 
 
 .wheel 
     width: 5px
@@ -28,7 +27,7 @@
     position: absolute
     top: 8px
     left: 50%
-    transform: translateX(-50%)
+    transform: translatex(-50%)
     animation: scroll 1.5s infinite
 
 
