--- a/src/styles/components/Navbar.sass
+++ b/src/styles/components/Navbar.sass
@@ -2,14 +2,13 @@
 @import "@/styles/utils/utils"
 
 .navbar
-    @apply block 
-    @apply flex flex-wrap content-between list-none m-0
+    @apply flex flex-wrap content-between  m-0
     height: $height-primary
     padding: $padding-primary 5rem $padding-primary 0
     font-family: $font-primary
     a
       @apply no-underline font-semibold text-2xl 
-      @apply flex-1 relative text-center
+      @apply flex-1 text-center
       border-left: solid 1px
       color: $color-text
     a:first-child
